ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oms-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "*.com"
      http:
        paths:
          - path: /apis/v1/inventories
            pathType: Prefix 
            backend:
              service:
                name: oms-inventory-svc
                port: 
                  number: 8080        
          - path: /apis/v1/customers
            pathType: Prefix 
            backend:
              service:
                name: oms-customer-svc
                port: 
                  number: 8080
          - path: /apis/v1/products
            pathType: Prefix 
            backend:
              service:
                name: oms-product-svc
                port: 
                  number: 8080
